tests/compile_fail/test_scalar_scalar_et_operator.cpp
#include <mpfrxx_mkII.h>

int main()
{
    auto expr = gmpfrxx_mkII::detail::operator+(1, 2);
    (void)expr;
    return 0;
}
